# Copyright 2016 The Gfx-rs Developers.
#
# Licensed under the Apache License, Version 2.0 (the "License");
# you may not use this file except in compliance with the License.
# You may obtain a copy of the License at
#
#     http://www.apache.org/licenses/LICENSE-2.0
#
# Unless required by applicable law or agreed to in writing, software
# distributed under the License is distributed on an "AS IS" BASIS,
# WITHOUT WARRANTIES OR CONDITIONS OF ANY KIND, either express or implied.
# See the License for the specific language governing permissions and
# limitations under the License.

[package]
name = "gfx_window_sciter"
version = "0.1.0"
description = "Sciter window for gfx-rs"
homepage = "https://github.com/gfx-rs/gfx"
repository = "https://github.com/gfx-rs/gfx"
keywords = ["graphics", "gamedev"]
license = "Apache-2.0"
authors = ["pravic <ehysta@gmail.com>"]

build = "build.rs"

[lib]
name = "gfx_window_sciter"

[dependencies]
log = "0.3"
kernel32-sys = "0.2"
user32-sys = "0.1"
winapi = "0.2"
lazy_static = "*"

gfx_core = { path = "../../core", version = "0.2" }
gfx_device_dx11 = { path = "../../backend/dx11", version = "0.1" }

sciter-rs = { git="https://github.com/pravic/rust-sciter", version="*" }
